# WayOLED

./: .gitignore  flake.nix  meson.build  meson_options.txt
contrib/: schedule.conf.example  wayoled-brightness-helper.c
contrib/nixos/: module.nix
contrib/systemd/: wayoled.service
contrib/udev/: 90-wayoled-backlight.rules
oledctl/: ipc_client.c  ipc_client.h  meson.build  oledctl.c
profiles/: default.conf  movie.conf
src/: meson.build
src/backlight/: backlight.c  backlight.h  inotify_watch.c  inotify_watch.h
src/colortemp/: colortemp.c  colortemp.h
src/core/: config.c  config.h  dimmer.c  dimmer.h  main.c  profile.c  profile.h  scheduler.c  scheduler.h  state.h  wayland_globals.c  wayland_globals.h
src/drm/: gamma_lut.c  kms_pan.c
src/ipc/: ipc_commands.c  ipc_commands.h  ipc_server.c  ipc_server.h
src/wayland/: idle_notify.c  idle_notify.h  layer_shell_overlay.c  layer_shell_overlay.h  refresh_cycle.c  refresh_cycle.h  screencopy.c  screencopy.h
